--- a/Bookshelf/Components/BorderedEditor.xaml
+++ b/Bookshelf/Components/BorderedEditor.xaml
@@ -7,14 +7,7 @@
     x:DataType="{Binding Source={x:Reference this}}"
     IsVisible="{Binding Source={x:Reference this}, Path=EditorIsVisible}">
     <Label Style="{StaticResource LblHEntry}" Text="{Binding Source={x:Reference this}, Path=LabelText}" />
-    <Border
-        Padding="8"
-        Background="#101923"
-        HorizontalOptions="FillAndExpand"
-        Stroke="#2B659B">
-        <Border.StrokeShape>
-            <RoundRectangle CornerRadius="5" />
-        </Border.StrokeShape>
+    <Frame Style="{StaticResource EntryBorders}">
         <Editor
             HeightRequest="70"
             HorizontalOptions="FillAndExpand"
@@ -23,5 +16,5 @@
             MinimumWidthRequest="250"
             Style="{StaticResource Entry}"
             Text="{Binding Source={x:Reference this}, Path=Text}" />
-    </Border>
+    </Frame>
 </VerticalStackLayout>
