--- a/Bookshelf/Components/BorderedNumericEntry.xaml
+++ b/Bookshelf/Components/BorderedNumericEntry.xaml
@@ -7,12 +7,9 @@
     x:Name="this"
     Margin="0,5,0,0">
     <Label Style="{StaticResource LblHEntry}" Text="{Binding Source={x:Reference this}, Path=LabelText}" />
-    <Border Style="{StaticResource EntryBorders}">
-        <Border.StrokeShape>
-            <RoundRectangle CornerRadius="5" />
-        </Border.StrokeShape>
+    <Frame Style="{StaticResource EntryBorders}">
         <Entry
-            HorizontalOptions="Start"
+            HorizontalOptions="FillAndExpand"
             Keyboard="Numeric"
             MaxLength="{Binding Source={x:Reference this}, Path=MaxLength}"
             Style="{StaticResource Entry}"
@@ -23,5 +20,5 @@
         </Entry>
         <!--  erro no net 7 impossibilita o uso dessa função, necessário esperar fix ser publicado no net 8  -->
         <!--  TextTransform="{Binding Source={x:Reference this},Path= TextTransformValue}"  -->
-    </Border>
+    </Frame>
 </VerticalStackLayout>
