--- a/Bookshelf/Views/Book/BookDetail.xaml
+++ b/Bookshelf/Views/Book/BookDetail.xaml
@@ -242,16 +242,15 @@
                         VerticalOptions="Fill" />
 
                     <!--    -->
-                    <Border
+                    <Frame
                         Margin="0,5,0,5"
+                        Padding="0"
                         BackgroundColor="#101923"
-                        HorizontalOptions="CenterAndExpand"
-                        Stroke="{StaticResource ActiveColor}">
-                        <Border.StrokeShape>
-                            <RoundRectangle CornerRadius="5" />
-                        </Border.StrokeShape>
+                        BorderColor="{StaticResource ActiveColor}"
+                        CornerRadius="5"
+                        HorizontalOptions="CenterAndExpand">
                         <Picker ItemsSource="{Binding StatusList}" SelectedIndex="{Binding PkrStatusSelectedIndex}" />
-                    </Border>
+                    </Frame>
 
                     <components:RatingBar Rate="{Binding Rate}" RatingBarIsVisible="{Binding RatingBarIsVisible}" />
 
