--- a/Bookshelf/Views/GoogleSearch/GoogleBooksResults.xaml
+++ b/Bookshelf/Views/GoogleSearch/GoogleBooksResults.xaml
@@ -36,9 +36,21 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
+                    <Label
+                        Grid.Row="0"
+                        Margin="0,0,0,10"
+                        FontFamily="FontAwesome"
+                        FontSize="40"
+                        HorizontalOptions="Center"
+                        IsVisible="{Binding IsNotConnected}"
+                        SemanticProperties.Description="Status da conexão"
+                        Text="{x:Static Icons:IconFont.Wifi}"
+                        TextColor="{x:Static Colors.Red}"
+                        VerticalOptions="Center" />
                     <ListView
                         CachingStrategy="RecycleElement"
                         HasUnevenRows="True"
+                        IsVisible="{Binding IsConnected}"
                         ItemTapped="ListView_ItemTapped"
                         ItemsSource="{Binding GoogleBooksList}"
                         SelectionMode="None">
