--- a/Bookshelf/Views/BookList.xaml
+++ b/Bookshelf/Views/BookList.xaml
@@ -11,10 +11,11 @@
     Title="{Binding PageTitle}"
     x:DataType="vm:BookListVM"
     Style="{StaticResource ContentPage}">
-    <ContentPage.Behaviors>
+    <!--<ContentPage.Behaviors>
         <toolkit:EventToCommandBehavior Command="{Binding OnAppearingCommand}" EventName="Appearing" />
-    </ContentPage.Behaviors>
+    </ContentPage.Behaviors>-->
     <ContentPage.Content>
+
         <StackLayout Style="{StaticResource MainStackLayout}" VerticalOptions="FillAndExpand">
             <Frame
                 Padding="10,0,10,5"
@@ -41,7 +42,7 @@
                     </ListView.Behaviors>
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="model:UIBookItem">
-                            <ViewCell>
+                            <ViewCell Tapped="ViewCell_Tapped">
                                 <Frame
                                     Margin="0,0,0,5"
                                     BackgroundColor="#101923"
