--- a/Bookshelf/Resources/Styles/Colors.xaml
+++ b/Bookshelf/Resources/Styles/Colors.xaml
@@ -8,8 +8,10 @@
     <Color x:Key="SecondaryInfoColor">#5EA2AC</Color>-->
     <Color x:Key="PrimaryColor">#4DACFF</Color>
     <Color x:Key="MainBackgroundColor">#1B2D3E</Color>
+    <Color x:Key="SecondaryBGColor">#101923</Color>
     <Color x:Key="ActiveColor">#92CBFF</Color>
     <Color x:Key="WarningColor">#F8D210</Color>
+    <Color x:Key="TitleBarSecondaryBGColor">#1D334B</Color>
 
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
