--- a/Bookshelf/Views/SignIn.xaml
+++ b/Bookshelf/Views/SignIn.xaml
@@ -9,6 +9,7 @@
     Title="Bookshelf - Gerenciamento de livros"
     x:DataType="vm:SignInVM"
     NavigationPage.HasNavigationBar="False"
+    Shell.FlyoutBehavior="Disabled"
     Shell.NavBarIsVisible="False"
     Style="{StaticResource ContentPage}">
     <ContentPage.Resources>
