--- a/Bookshelf/Views/UpdatePassword.xaml
+++ b/Bookshelf/Views/UpdatePassword.xaml
@@ -8,6 +8,7 @@
     xmlns:vm="clr-namespace:Bookshelf.ViewModels"
     Title="Recuperar senha"
     x:DataType="vm:UpdatePasswordVM"
+    Shell.FlyoutBehavior="Disabled"
     Style="{StaticResource ContentPage}">
     <ScrollView HorizontalOptions="CenterAndExpand">
         <StackLayout>
