refac: criação do objeto de ui do historico passada para a camada de servives. refac: strings dos icones passadas para a camada de models. Closes #68

--- a/Bookshelf/Views/UpdatePassword.xaml
+++ b/Bookshelf/Views/UpdatePassword.xaml
@@ -3,7 +3,7 @@
     x:Class="Bookshelf.Views.UpdatePassword"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:Icons="clr-namespace:Bookshelf.Resources.Fonts.Styles"
+    xmlns:Icons="clr-namespace:Models;assembly=Models"
     xmlns:components="clr-namespace:Bookshelf.Components"
     xmlns:vm="clr-namespace:Bookshelf.ViewModels"
     Title="Recuperar senha"
