--- a/Bookshelf/AppShell.xaml
+++ b/Bookshelf/AppShell.xaml
@@ -4,7 +4,7 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:Components="clr-namespace:Bookshelf.Components"
-    xmlns:Icons="clr-namespace:Bookshelf.Resources.Fonts.Styles"
+    xmlns:Icons="clr-namespace:Models;assembly=Models"
     xmlns:local="clr-namespace:Bookshelf.Views"
     xmlns:vm="clr-namespace:Bookshelf.ViewModels"
     BackgroundColor="{StaticResource MainBackgroundColor}"
