--- a/Bookshelf/Components/FlyoutHeader.xaml
+++ b/Bookshelf/Components/FlyoutHeader.xaml
@@ -3,7 +3,7 @@
     x:Class="Bookshelf.Components.FlyoutHeader"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:Icons="clr-namespace:Bookshelf.Resources.Fonts.Styles"
+    xmlns:Icons="clr-namespace:Models;assembly=Models"
     x:Name="this">
     <FlexLayout HorizontalOptions="FillAndExpand">
         <FlexLayout.Background>
