--- a/Bookshelf/Views/Historic.xaml
+++ b/Bookshelf/Views/Historic.xaml
@@ -3,7 +3,7 @@
     x:Class="Bookshelf.Views.Historic"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:Icons="clr-namespace:Bookshelf.Resources.Fonts.Styles"
+    xmlns:Icons="clr-namespace:Models;assembly=Models"
     xmlns:behaviors="clr-namespace:Bookshelf.Utils.Behaviors"
     xmlns:model="clr-namespace:Models.Books.Historic;assembly=Models"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
