--- a/Bookshelf/Views/SignUp.xaml
+++ b/Bookshelf/Views/SignUp.xaml
@@ -3,7 +3,7 @@
     x:Class="Bookshelf.Views.SignUp"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:Icons="clr-namespace:Bookshelf.Resources.Fonts.Styles"
+    xmlns:Icons="clr-namespace:Models;assembly=Models"
     xmlns:components="clr-namespace:Bookshelf.Components"
     xmlns:viewmodels="clr-namespace:Bookshelf.ViewModels"
     Title="Cadastrar Usuário"
