Atualização de usuario no header do shell em caso de login. correção na assincronidade do loading do total de livros. #Closes 72

--- a/Bookshelf/Views/FirstSyncProcess.xaml
+++ b/Bookshelf/Views/FirstSyncProcess.xaml
@@ -7,7 +7,13 @@
     xmlns:vm="clr-namespace:Bookshelf.ViewModels"
     x:DataType="vm:FirstSyncProcessVM"
     NavigationPage.HasBackButton="False"
+    NavigationPage.HasNavigationBar="False"
+    Shell.FlyoutBehavior="Disabled"
+    Shell.NavBarIsVisible="False"
     Style="{StaticResource ContentPage}">
+    <Shell.BackButtonBehavior>
+        <BackButtonBehavior IsVisible="False" IsEnabled="False" />
+    </Shell.BackButtonBehavior>
     <ContentPage.Resources>
         <Style x:Key="Icon" TargetType="Label">
             <Setter Property="TextColor" Value="White" />
