rename de funções, transição de classes model para dtos.

--- a/Bookshelf/Resources/Styles/Styles.xaml
+++ b/Bookshelf/Resources/Styles/Styles.xaml
@@ -46,18 +46,18 @@
     </Style>
 
     <Style x:Key="LblHEntry" TargetType="Label">
-        <Setter Property="TextColor" Value="{StaticResource White}" />
+        <Setter Property="TextColor" Value="{StaticResource Gray100}" />
         <Setter Property="BackgroundColor" Value="Transparent" />
         <Setter Property="FontFamily" Value="OpenSansSemibold" />
         <Setter Property="FontSize" Value="14" />
-        <Setter Property="Padding" Value="5,0,10,0" />
+        <Setter Property="Padding" Value="5,0,0,0" />
         <Setter Property="VisualStateManager.VisualStateGroups">
             <VisualStateGroupList>
                 <VisualStateGroup x:Name="CommonStates">
                     <VisualState x:Name="Normal" />
                     <VisualState x:Name="Disabled">
                         <VisualState.Setters>
-                            <Setter Property="TextColor" Value="{StaticResource White}" />
+                            <Setter Property="TextColor" Value="{StaticResource Gray300}" />
                         </VisualState.Setters>
                     </VisualState>
                 </VisualStateGroup>
