--- a/Bookshelf/Views/Book/AddBook.xaml
+++ b/Bookshelf/Views/Book/AddBook.xaml
@@ -6,7 +6,7 @@
     xmlns:behaviors="clr-namespace:Bookshelf.Utils.Behaviors"
     xmlns:components="clr-namespace:Bookshelf.Components"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-    xmlns:viewmodels="clr-namespace:Bookshelf.ViewModels"
+    xmlns:viewmodels="clr-namespace:Bookshelf.ViewModels.Book"
     Title="Cadastrar Livro"
     x:DataType="viewmodels:AddBookVM"
     Style="{StaticResource ContentPage}">
